# reF00D

./: CMakeLists.txt  README.md  build.sh  exports.yml
src/: main.c  ref00d_aes_ecb.S  ref00d_kprx_auth.c  ref00d_kprx_auth.h  ref00d_kprx_auth_keys_release.c  ref00d_rsa_engine.c  ref00d_rsa_engine.h  ref00d_types.h  ref00d_utils.c  ref00d_utils.h  self.h
